--- a/ZeldaWebsite/Views/Cart/Index.cshtml
+++ b/ZeldaWebsite/Views/Cart/Index.cshtml
@@ -44,7 +44,7 @@
 
 										<tr data-product-id="@flavour.Id">
 										<td class="product-thumbnail">
-												<img src="~/assets/img/NewFolder/@flavour.ImageURL" alt="Image" class="img-fluid" width="100" height="100">
+											<img src="~/images/@flavour.ImageURL" alt="Image" class="img-fluid" width="100" height="100">
 										</td>
 										<td>@flavour.Name</td>
 										<td>@flavour.Price$ per liter</td>
