--- a/ZeldaWebsite/Views/Home/About.cshtml
+++ b/ZeldaWebsite/Views/Home/About.cshtml
@@ -37,7 +37,7 @@
                     </div>
                     <div class="col-lg-12">
                         <div class="about-img pb-bottom">
-                        <img src="\assets\img\NewFolder\NewFolder1\About.jpg" alt="" class="w-100">
+                        <img src="~\images\NewFolder1\About.jpg" alt="" class="w-100">
                         
                     </div>
                     </div>
