--- a/ZeldaWebsite/Views/Home/Flavour.cshtml
+++ b/ZeldaWebsite/Views/Home/Flavour.cshtml
@@ -24,7 +24,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 mb-20">
-				<img src="~/assets/img/NewFolder/@Html.DisplayFor(model => model.ImageURL)" alt="" class="img-fluid">
+				<img src="~/images/@Html.DisplayFor(model => model.ImageURL)" alt="" class="img-fluid">
 			</div>
 			<div class="col-md-6">
 				<h2 class="text-black">@Html.DisplayFor(model => model.Name)</h2>
