--- a/ZeldaWebsite/Views/Home/Flavours.cshtml
+++ b/ZeldaWebsite/Views/Home/Flavours.cshtml
@@ -62,7 +62,7 @@
                                 <div class="single-new-arrival mb-50 text-center" >
                                     <a asp-action="Flavour" asp-route-id="@item.Id">
                                     <div class="popular-img">
-                                            <img src="~/assets/img/NewFolder/@Html.DisplayFor(modelItem => item.ImageURL)" alt="">
+                                                <img src="~/images/@Html.DisplayFor(modelItem => item.ImageURL)" alt="">
                                         
                                     </div>
                                     <div class="popular-caption">
