--- a/ZeldaWebsite/Views/Manager/Index.cshtml
+++ b/ZeldaWebsite/Views/Manager/Index.cshtml
@@ -42,7 +42,7 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                    <img src="~/assets/img/NewFolder/@Html.DisplayFor(modelItem => item.ImageURL)" alt="" width="100" height="100">
+                    <img src="~/images/@Html.DisplayFor(modelItem => item.ImageURL)" alt="" width="100" height="100">
             </td>
             <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" style="color:darkblue">Edit</a> |
