--- a/ZeldaWebsite/Views/Order/Checkout.cshtml
+++ b/ZeldaWebsite/Views/Order/Checkout.cshtml
@@ -111,8 +111,8 @@
 											</tr>
 										</tbody>
 									</table>
-									@if (TempData["OrderCompleted"] as bool? != true)
-										{
+									@if (TempData["OrderPayed"] as bool? != true)
+									{
 									<div class="border p-3 mb-5">
 										
 											<div id="paypal-button-container"></div>
@@ -195,7 +195,7 @@
 										
 									</div>
 									}
-									@if (TempData["OrderCompleted"] as bool? == true)
+									@if (TempData["OrderPayed"] as bool? == true)
 									{
 										<h3 class="text-danger">Payment succeded, One or more of the details feilds is missing/ incorrect</h3>
 									    <button type="submit" name="tryAgain" value="true" class="btn">Try Again</button>
