--- a/ZeldaWebsite/Views/Cart/Index.cshtml
+++ b/ZeldaWebsite/Views/Cart/Index.cshtml
@@ -25,6 +25,7 @@
 			<div class="row mb-5">
 				<form class="col-md-12" method="post">
 					<div class="site-blocks-table">
+						<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 						<table class="table table-bordered">
 							<thead>
 								<tr>
