--- a/ZeldaWebsite/Views/Manager/Create.cshtml
+++ b/ZeldaWebsite/Views/Manager/Create.cshtml
@@ -1,8 +1,11 @@
 ﻿@model ZeldaWebsite.Models.Flavour
+@using Microsoft.AspNetCore.Mvc
 
 @{
+    
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/ManagerLayout.cshtml";
+       
 }
 <div class="ml-55">
     <h1>Create</h1>
