--- a/ZeldaWebsite/Views/Home/Flavours.cshtml
+++ b/ZeldaWebsite/Views/Home/Flavours.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="row">
                 <!--? Left content -->
-                <div class="col-xl-3 col-lg-3 col-md-4 ">
+                @*<div class="col-xl-3 col-lg-3 col-md-4 ">
                     <!-- Job Category Listing start -->
                     <div class="category-listing mb-50">
                         <!-- single one -->
@@ -51,9 +51,9 @@
                         </div>
                     </div>
                     <!-- Job Category Listing End -->
-                </div>
+                </div>*@
                 <!--?  Right content -->
-                <div class="col-xl-9 col-lg-9 col-md-8 ">
+                <div class="col-xl-12 col-lg-12 col-md-12">
                     <!--? New Arrival Start -->
                     <div class="new-arrival new-arrival2">
                         <div class="row">
@@ -62,7 +62,7 @@
                                 <div class="single-new-arrival mb-50 text-center" >
                                     <a asp-action="Flavour" asp-route-id="@item.Id">
                                     <div class="popular-img">
-                                                <img src="~/images/@Html.DisplayFor(modelItem => item.ImageURL)" alt="">
+                                                <img src="~/images/@Html.DisplayFor(modelItem => item.ImageURL)" alt="" width="100%" height="200px">
                                         
                                     </div>
                                     <div class="popular-caption">
