--- a/ZeldaWebsite/Views/Home/Index.cshtml
+++ b/ZeldaWebsite/Views/Home/Index.cshtml
@@ -97,13 +97,13 @@
             </div>
         </div>
         <div class="row">
-                @foreach (var item in Model)
+                @foreach (var item in Model.Take(8))
                 {
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                         <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
                             <a asp-action="Flavour" asp-route-id="@item.Id">
                                 <div class="popular-img">
-                                    <img src="~/images/@Html.DisplayFor(modelItem => item.ImageURL)" alt="">
+                                    <img src="~/images/@Html.DisplayFor(modelItem => item.ImageURL)" alt="" width="100%" height="200px">
                                     
                                 </div>
                                 <div class="popular-caption">
