--- a/ZeldaWebsite/Views/Cart/Index.cshtml
+++ b/ZeldaWebsite/Views/Cart/Index.cshtml
@@ -22,92 +22,115 @@
 	</div>
 	<div class="site-section">
 		<div class="container">
-			<div class="row mb-5">
-				<form class="col-md-12" method="post">
-					<div class="site-blocks-table">
-						<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-						<table class="table table-bordered">
-							<thead>
-								<tr>
-									<th class="product-thumbnail">Image</th>
-									<th class="product-name">Flavour</th>
-									<th class="product-price">Price</th>
-									<th class="product-size">Size</th>
-									<th class="product-total">Total</th>
-									<th class="product-remove">Remove</th>
-								</tr>
-							</thead>
-							<tbody>
-								@for (var i = 0; i < Model.CartItems.Count; i++)
-								{
-									var cartItem = Model.CartItems[i];
-									var flavour = Model.Flavours[i];
+			@if (Model.CartItems != null)
+			{
+				<div class="row mb-5">
+					<form class="col-md-12" method="post">
+						<div class="site-blocks-table">
+							<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+							<table class="table table-bordered">
+								<thead>
+									<tr>
+										<th class="product-thumbnail">Image</th>
+										<th class="product-name">Flavour</th>
+										<th class="product-price">Price</th>
+										<th class="product-size">Size</th>
+										<th class="product-total">Total</th>
+										<th class="product-remove">Remove</th>
+									</tr>
+								</thead>
+								<tbody>
+									@for (var i = 0; i < Model.CartItems.Count; i++)
+									{
+										var cartItem = Model.CartItems[i];
+										var flavour = Model.Flavours[i];
 
 										<tr data-product-id="@flavour.Id">
-										<td class="product-thumbnail">
-											<img src="~/images/@flavour.ImageURL" alt="Image" class="img-fluid" width="100" height="100">
-										</td>
-										<td>@flavour.Name</td>
-										<td>@flavour.Price$ per liter</td>
-										<td>@cartItem.Size liter</td>
+											<td class="product-thumbnail">
+												<img src="~/images/@flavour.ImageURL" alt="Image" class="img-fluid" width="100" height="100">
+											</td>
+											<td>@flavour.Name</td>
+											<td>@flavour.Price$ per liter</td>
+											<td>@cartItem.Size liter</td>
 
-										<td>@cartItem.Price.ToString("F2")</td>
+											<td>@cartItem.Price.ToString("F2")</td>
 											<td><a asp-action="RemoveFromCart" asp-route-id="@cartItem.ItemId" class="genric-btn danger-border radius" width="20" height="20">X</a></td>
 										</tr>
-								} 
-							</tbody>
-						</table>
-					</div>
-				</form>
-			</div>
+									} 
+								</tbody>
+							</table>
+						</div>
+					</form>
+				</div>
 
-			<div class="row">
-				<div class="col-md-6">
-					<div class="row mb-5">
-						<div class="col-md-6">
-							<a class="genric-btn primary radius" asp-controller="Home" asp-action="Flavours">Continue Shopping</a>
+				<div class="row">
+					<div class="col-md-6">
+						<div class="row mb-5">
+							<div class="col-md-6">
+								<a class="genric-btn primary radius" asp-controller="Home" asp-action="Flavours">Continue Shopping</a>
+							</div>
 						</div>
+						@*<div class="row">
+							<div class="col-md-12">
+								<label class="text-black h4" for="coupon">Coupon</label>
+								<p>Enter your coupon code if you have one.</p>
+							</div>
+							<div class="col-md-8 mb-3 mb-md-3">
+								<input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
+							</div>
+							<div class="col-md-12  mb-10">
+								<button class="genric-btn primary radius">Apply Coupon</button>
+							</div>
+						</div>*@
 					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<label class="text-black h4" for="coupon">Coupon</label>
-							<p>Enter your coupon code if you have one.</p>
-						</div>
-						<div class="col-md-8 mb-3 mb-md-3">
-							<input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
-						</div>
-						<div class="col-md-12  mb-10">
-							<button class="genric-btn primary radius">Apply Coupon</button>
+
+					<div class="col-md-6 pl-5">
+						<div class="row justify-content-end">
+							<div class="col-md-7">
+								<div class="row">
+									<div class="col-md-12 text-right border-bottom mb-5">
+										<h3 class="text-black h4 text-uppercase">Cart Totals</h3>
+									</div>
+								</div>
+
+								<div class="row mb-5">
+									<div class="col-md-6">
+										<span class="text-black">Total</span>
+									</div>
+									<div class="col-md-6 text-right">
+										<strong class="text-black">@Model.Total().ToString("F2")$</strong>
+									</div>
+								</div>
+
+								<div class="row">
+									<div class="col-md-12">
+										<a asp-action="Checkout" class="btn mb-10" id="checkoutButton" >Proceed To Checkout</a>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 pl-5">
-					<div class="row justify-content-end">
-						<div class="col-md-7">
-							<div class="row">
-								<div class="col-md-12 text-right border-bottom mb-5">
-									<h3 class="text-black h4 text-uppercase">Cart Totals</h3>
-								</div>
-							</div>
-
-							<div class="row mb-5">
-								<div class="col-md-6">
-									<span class="text-black">Total</span>
-								</div>
-								<div class="col-md-6 text-right">
-									<strong class="text-black">@Model.Total().ToString("F2")$</strong>
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-md-12">
-									<a asp-action="Checkout" class="btn mb-10" id="checkoutButton" >Proceed To Checkout</a>
-								</div>
-							</div>
-						</div>
+			}
+			else
+			{
+				<div class="row">
+					<div class="col-md-6 align-self-center">
+						<img src="https://cdn.dribbble.com/users/351694/screenshots/10760065/media/c93e509e870484db932891b96447bd85.gif" alt="EmptyCartImage" class="img-fluid" width="800" height="600">
+					</div>
+					<div class="col-md-6 align-self-center">
+						<h1>Oops!</h1>
+						<h2>Your cart is empty.</h2>
+						<p>
+							Your cart is feeling rather lonely! 
+							Time to fill it with some goodies. 
+							Click the button below to start shopping.
+						</p>
+						<a class="genric-btn primary radius" asp-controller="Home" asp-action="Flavours">Back To Shop</a>
 					</div>
 				</div>
-			</div>
+			
+			}
 		</div>
 	</div>
 	
